InventoryManagement/force-app/src/objects/Cycle_Count_Date__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCD_Number__c</fullName>
        <displayFormat>CCD-{0}</displayFormat>
        <label>CCD Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Cycle_Count_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Cycle Count Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Cycle Count Dates</relationshipLabel>
        <relationshipName>Cycle_Count_Dates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locations__c</fullName>
        <label>Locations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NorCal</fullName>
                </value>
                <value>
                    <fullName>Nor Cal - Citrus Heights</fullName>
                </value>
                <value>
                    <fullName>Vehicle 1 - Ria&apos;s Location</fullName>
                </value>
                <value>
                    <fullName>Arizona Serialized Products</fullName>
                </value>
                <value>
                    <fullName>Vehicle 02 - Sushant</fullName>
                </value>
                <value>
                    <fullName>Test location</fullName>
                </value>
                <value>
                    <fullName>SoCal - Santa Ana</fullName>
                </value>
                <value>
                    <fullName>V250 - Chevy Hemi</fullName>
                </value>
                <value>
                    <fullName>V50- test van</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>RMA Inventory</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Non-Inventory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type_Main__c</fullName>
        <label>Product Type (Main)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type_Sub__c</fullName>
        <label>Product Type (Sub)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tigos/UKT Retrofit</fullName>
                </value>
                <value>
                    <fullName>INVRTR ACCSSRY - OPTMZR - SOLAREDGE - P505</fullName>
                </value>
                <value>
                    <fullName>RMA - INVRTR - STRNG - SOLAREDGE - SE3800A-US</fullName>
                </value>
                <value>
                    <fullName>RCKNG &amp; MNTNG - WR MNGMNT - DOTTIE - CABLE TIE</fullName>
                </value>
                <value>
                    <fullName>40amp Breaker</fullName>
                </value>
                <value>
                    <fullName>INVRTR - STRNG - SMA - SUNNY BOY 3.0-US-41</fullName>
                </value>
                <value>
                    <fullName>RMA - New Unit/s Installation</fullName>
                </value>
                <value>
                    <fullName>BOS - CNNCTR - BUCHANAN - SPLICE CAP COPPER CRIMP CONNECTORS</fullName>
                </value>
                <value>
                    <fullName>Sunrun Cell Swap</fullName>
                </value>
                <value>
                    <fullName>INVRTR MNTRNG - MNTRNG ACCSSRY - NETGEAR - N300 WIFI EXTENDER</fullName>
                </value>
                <value>
                    <fullName>MDL - MDL - LONGI - 335W BOB</fullName>
                </value>
                <value>
                    <fullName>BOS - CRCT BRKR - SOYG - CH280 2-POLE 80-AMP</fullName>
                </value>
                <value>
                    <fullName>RCKNG &amp; MNTNG - CLMP - UNIRAC - UNIVERSAL MID CLAMP</fullName>
                </value>
                <value>
                    <fullName>BOS - CRCT BRKR - SQUARE D - 1 POLE 15A</fullName>
                </value>
                <value>
                    <fullName>Per Diem</fullName>
                </value>
                <value>
                    <fullName>System Installation (R&amp;R)</fullName>
                </value>
                <value>
                    <fullName>TL - TL - X - MC4 CRIMPER</fullName>
                </value>
                <value>
                    <fullName>Tigo Install - (7 or less)</fullName>
                </value>
                <value>
                    <fullName>BOS - CNNCTR - ENPHASE - Q SEAL 10</fullName>
                </value>
                <value>
                    <fullName>$249 Panel Cleaning ≤ 19 Panels</fullName>
                </value>
                <value>
                    <fullName>Additional Labor</fullName>
                </value>
                <value>
                    <fullName>INVRTR MNTRNG - GTWY - ENPHASE - IQ ENVOY 535946</fullName>
                </value>
                <value>
                    <fullName>RMA - INVRTR - STRNG - FIMER - UNO-DM-3.3-TL-PLUS-US</fullName>
                </value>
                <value>
                    <fullName>RMA - INVRTR MNTRNG - COMM CARD - SOLAREDGE - FLD-1PH-PRT-03</fullName>
                </value>
                <value>
                    <fullName>BOS - CNNCTR - BUCHANAN - SPLICE CAP INSULATOR</fullName>
                </value>
                <value>
                    <fullName>RMA - INVRTR - STRNG - FRONIUS - PRIMO 5.0-1 (240V)</fullName>
                </value>
                <value>
                    <fullName>SPPLY - SFTY - X - 18&apos; 5IN1 MULTI-POSITION LADDER</fullName>
                </value>
                <value>
                    <fullName>SPPLY - OTHR - ORANGE HOME DEPOT BUCKET</fullName>
                </value>
                <value>
                    <fullName>RCKNG &amp; MNTNG - CLMP - PROSOLAR - 1.481 - 1.520 BONDING END CLAMP</fullName>
                </value>
                <value>
                    <fullName>Firmware Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Technicians__c</fullName>
        <label>Technicians</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ria Mittal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timeframe__c</fullName>
        <label>Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Biweekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cycle Count Date</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cycle_Count_Date__c</columns>
        <columns>Location__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cycle Count Date Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cycle Count Dates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>